# swagger.yml
@@ -16,10 +16,15 @@ servers:
     url: https://virtserver.swaggerhub.com/MuhammadFahmii/Ez_musix/1.0.0
 tags:
   - name: users
-    description: Operations about User
-  - name: user
-    description: Operations about user
+    description: Operations about Users
+  - name: playlists
+    description: Operations about Playlists
+  - name: tracks
+    description: Operations about Tracks
+  - name : detail playlist
+    description: Operations about detail playlist
 paths:
+# Users
   /users/login:
     post:
       tags:
@@ -48,14 +53,14 @@ paths:
                       token:
                         type: string
                         example: 'eyJhbGciOiJIUzI1NiIsInR5'
-        '404':
-          description: User not found
-      security:
-        - petstore_auth:
-            - 'write:pets'
-            - 'read:pets'
+        '204':
+          $ref: "#/components/responses/204"
+        '400':
+          $ref: "#/components/responses/400"
+        '500':
+          $ref: "#/components/responses/500"
       requestBody:
-        $ref: '#/components/requestBodies/Users'
+        $ref: "#/components/requestBodies/Users"
   /users/register:
     post:
       tags:
@@ -63,28 +68,31 @@ paths:
       summary: Register user
       description: For register new user.
       responses:
-        '200':
-          description: successful operation
+        '201':
+          description: successful created users
+          content:
+            application/json:
+              schema:
+                type: object    
+                properties:      
+                  status:
+                    type: integer
+                    example: 201
+                  message:
+                    type: string
+                    example: "successful"
+                  data:
+                    type: object    
+                    properties:                
+                      username:
+                        type: integer
+                        example: fahmi
+        '400':
+          $ref: "#/components/responses/400"
+        '500':
+          $ref: "#/components/responses/500"
       requestBody:
-        content:
-          application/json:
-            schema:
-              type: object    
-              properties:      
-                status:
-                  type: integer
-                  example: 200
-                message:
-                  type: string
-                  example: "successful"
-                data:
-                  type: object    
-                  properties:                
-                    username:
-                      type: integer
-                      example: fahmi
-        description: Created user object
-        required: true
+        $ref: "#/components/requestBodies/Users"
   /users:
     get:
       tags:
@@ -114,99 +122,331 @@ paths:
                         username:
                           type: string
                           example: 'heinz'
-  /user/createWithArray:
+        '204':
+          $ref: "#/components/responses/204"
+        '500':
+          $ref: "#/components/responses/500"
+      security:
+        - api_key:
+            - 'write:users'
+
+# Playlist 
+  /playlists:
     post:
       tags:
-        - user
-      summary: Creates list of users with given input array
-      operationId: createUsersWithArrayInput
+        - playlists
+      summary: Create new playlist
       responses:
-        default:
-          description: successful operation
+        '400':
+          $ref:  "#/components/responses/400"
+        '500':
+          $ref:  "#/components/responses/500"
       requestBody:
-        $ref: '#/components/requestBodies/UserArray'
-  /user/createWithList:
-    post:
-      tags:
-        - user
-      summary: Creates list of users with given input array
-      operationId: createUsersWithListInput
-      responses:
-        default:
-          description: successful operation
-      requestBody:
-        $ref: '#/components/requestBodies/UserArray'
-  '/user/{username}':
+        content:
+          application/json:
+            schema:
+              type: object    
+              properties:      
+                status:
+                  type: integer
+                  example: 200
+                message:
+                  type: string
+                  example: "successful"
+                data:
+                  type: object    
+                  properties:        
+                    username:
+                      type: integer
+                      example: calm
+        description: Created user object
+        required: true
     get:
       tags:
-        - user
-      summary: Get user by user name
-      operationId: getUserByName
+        - playlists
+      summary: Get all playlist
+      responses:
+        '200':
+          description: successful operation
+          content: 
+            application/json:
+              schema:
+                type: object    
+                properties:      
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "successful"
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: integer
+                          example: calm        
+                        track:  
+                          type: array
+                          items: 
+                            type: object
+                            properties:
+                              track_name:
+                                type: string
+                                example: to the bone
+                              artist_name:
+                                type: string
+                                example: pamungkas
+        '204':
+          $ref: "#/components/responses/204"
+        '500':
+          $ref: "#/components/responses/500"
+  '/playlist/{playlist_id}':
+    delete:
+      tags:
+        - playlists
+      summary: Delete playlist based on id
+      description: this can be only done with logged users
       parameters:
-        - name: username
-          in: path
-          description: The name that needs to be fetched. Use user1 for testing.
-          required: true
-          schema:
-            type: string
+      - name: playlist_id
+        in: path
+        description: The playlist_id that needs to be fetched. Use 1 for testing.
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: successful operation
+          content: 
+            application/json:
+              schema:
+                type: object    
+                properties:      
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "successful"
+                  data:
+                    type: object
+                    properties:
+                      name:
+                        type: integer
+                        example: calm
+        '204':
+          $ref: "#/components/responses/204"
+        '500':
+          $ref: "#/components/responses/500" 
+# Tracks
+  /tracks:
+    get:
+      tags:
+        - tracks
+      summary: Get spesified track using 3rd API
+      parameters:
+      - name: track_name
+        in: path
+        description: The playlist_id that needs to be fetched. Use to the bone for testing.
+        required: true
+        schema:
+          type: string
+      - name: artist_name
+        in: path
+        description: The artist_name that needs to be fetched. Use pamungkas for testing.
+        required: true
+        schema:
+          type: string
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
-    put:
+                type: object    
+                properties:      
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "successful"
+                  data:
+                    type: object    
+                    properties:                
+                      id:
+                        type: integer
+                        example: fahmi
+                      title:
+                        type: string
+                        example: 'to the bone'
+                      artist_name:
+                        type: string
+                        example: 'pamungkas'
+                      album_name:
+                        type: string
+                        example: 'blabla'
+        '204':
+          description: track not found
+
+# Detail Playlist
+  /detailPlaylist:
+    post:
       tags:
-        - user
-      summary: Updated user
-      description: This can only be done by the logged in user.
-      operationId: updateUser
-      parameters:
-        - name: username
-          in: path
-          description: name that need to be updated
-          required: true
-          schema:
-            type: string
+        - detail playlist
+      summary: Create new playlist
       responses:
-        '400':
-          description: Invalid user supplied
-        '404':
-          description: User not found
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object    
+                properties:      
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "successful"
+                  data:
+                    type: object    
+                    properties:                
+                      playlist_name:
+                        type: integer
+                        example: calm
+                      track_name:
+                        type: string
+                        example: 'to the bone'
+        '204':
+          description: track not found operation
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
-        description: Updated user object
+              type: object    
+              properties:      
+                status:
+                  type: integer
+                  example: 200
+                message:
+                  type: string
+                  example: "successful"
+                data:
+                  type: object    
+                  properties:        
+                    playlist_id:
+                      type: integer
+                      example: 1
+                    track_name:
+                      type: string
+                      example: "to the bone"
+                    artist_name:
+                      type: string
+                      example: "pamungkas"
+        description: Created user object
         required: true
-    delete:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: username
+  '/detailPlaylist/{playlist_id}/{track_id}':
+      delete:
+        tags:
+          - detail playlist
+        summary: Delete playlist based on id
+        description: this can be only done with logged users
+        parameters:
+        - name: playlist_id
           in: path
-          description: The name that needs to be deleted
+          description: The playlist_id that needs to be fetched. Use 1 for testing.
           required: true
           schema:
-            type: string
-      responses:
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
+            type: integer
+        - name: track_id
+          in: path
+          description: The track_id that needs to be fetched. Use 198422539 for testing.
+          required: true
+          schema:
+            type: integer
+        responses:
+          '200':
+            description: successful operation
+            content: 
+              application/json:
+                schema:
+                  type: object    
+                  properties:      
+                    status:
+                      type: integer
+                      example: 200
+                    message:
+                      type: string
+                      example: "successful"
+                    data:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                          example: calm
+                        track_name:
+                          type: string
+                          example: to the bone
+          '204':
+            description: data not found
+            content: 
+              application/json:
+                schema:
+                  type: object    
+                  properties:      
+                    status:
+                      type: integer
+                      example: 204
+                    message:
+                      type: string
+                      example: "data not found"
+  
 components:
+  responses:
+    '204':
+      description: record not found
+      content:
+        application/json:
+          schema:
+            type: object    
+            properties:      
+              status:
+                type: integer
+                example: 204
+              message:
+                type: string
+                example: "record not found"
+    '400':
+      description: all request body not fill
+      content:
+        application/json:
+          schema:
+            type: object    
+            properties:      
+              status:
+                type: integer
+                example: 400
+              message:
+                type: string
+                example: "please fill all field"
+    '500':
+      description: "internal server error"
+      content:
+            application/json:
+              schema:
+                type: object    
+                properties:      
+                  status:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: "internal server error"
   schemas:
     User:
       type: object
@@ -244,28 +484,28 @@ components:
             properties:
               username:
                 type: string
+                example: fahmi
               password:
                 type: string
-      description: Users object that needs to be added to the System
+                example: 123
+      description: users object
       required: true
-    UserArray:
+    NewPlaylist:
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/User'
-      description: List of user object
+            type: object
+            properties:
+              id:
+                type: integer
+                format: int64
+              username:
+                type: string
+              firstName:
+                type: string
+      description: List of playlist object
       required: true
   securitySchemes:
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
-          scopes:
-            'write:pets': modify pets in your account
-            'read:pets': read your pets
     api_key:
       type: apiKey
       name: api_key
